--- a/homepage.html
+++ b/homepage.html
@@ -2,20 +2,22 @@
 <html>
     <head>
         <title>Home Page</title>
-    </head>
+        <!-- This homepage will be styled using an exteranal css file -->
+        <link rel="stylesheet" type="text/css" href="myfile.css">
+   </head>
         
         <body>
-            <h1>Hello Ciara!</h1>
+            <h1>Welcome!</h1>
             <h2>Simple header</h2>
             <h3>Another header just smaller this time</h3>
-            <h4>123</h4>
-            <h5>456</h5>
-            <h6>789</h6>
-             <a href="bootstrap.html"><button>Back to home page</button></a>
+            <h4>This is small</h4>
+            <h5>This is smaller</h5>
+            <h6>This is the smallest</h6>
+             <a href="bootstrap.html"><button>To bootstrap</button></a>
             <!-- comment
             <h3> This is a smaller header </h3>
             <h5> this is an even smaller header </h5>
             -->
-            <p>Hello world!</p>
+             <a href="bio.html"><button>To The Bio</button></a>
         </body>
  </html>
